tests/snapshots/jira_search__discover_sprints_collects_open_sprints_and_ignores_closed-2.snap
---
source: tests/jira_search.rs
expression: "jira.json_bodies_for(\"POST\", \"api/3/search/jql\").await"
---
[
  {
    "fields": [
      "summary",
      "sprint",
      "customfield_10020"
    ],
    "fieldsByKeys": true,
    "jql": "project = \"DEMO\" AND (sprint in openSprints() OR sprint in futureSprints()) ORDER BY created DESC",
    "maxResults": 100
  }
]
