tests/snapshots/jira_search__discover_sprints_collects_open_sprints_and_ignores_closed.snap
---
source: tests/jira_search.rs
expression: sprints
---
[
    Sprint {
        id: 12,
        name: "Sprint 12",
        state: "active",
    },
    Sprint {
        id: 13,
        name: "Sprint 13",
        state: "future",
    },
]
