tests/snapshots/jira_search__field_discovery_requests.snap
---
source: tests/jira_search.rs
expression: jira.request_snapshots().await
---
[
  {
    "body": null,
    "method": "GET",
    "path": "/ex/jira/test-cloud/rest/api/3/field",
    "query": []
  },
  {
    "body": null,
    "method": "GET",
    "path": "/ex/jira/test-cloud/rest/api/3/field",
    "query": []
  }
]
