tests/snapshots/jira_search__search_returns_issues_and_next_page_token-2.snap
---
source: tests/jira_search.rs
assertion_line: 28
expression: "jira.json_bodies_for(\"POST\", \"api/3/search/jql\").await"
---
[
  {
    "fields": [
      "summary",
      "issuetype",
      "priority",
      "status",
      "assignee",
      "comment",
      "description",
      "sprint",
      "parent",
      "customfield_10016"
    ],
    "fieldsByKeys": true,
    "jql": "project = \"DEMO\" AND sprint = 12 AND summary ~ \"checkout\" AND status in (\"In Progress\") AND issuetype in (\"Bug\") ORDER BY priority DESC",
    "maxResults": 50,
    "nextPageToken": "page-1"
  }
]
