tests/snapshots/jira_search__sprint_field_id.snap
---
source: tests/jira_search.rs
expression: search.sprint_field_id().await.unwrap()
---
Some(
    "customfield_10020",
)
