tests/snapshots/jira_search__story_points_field_id.snap
---
source: tests/jira_search.rs
expression: search.story_points_field_id().await.unwrap()
---
Some(
    "customfield_10016",
)
